--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             border-radius: 8px;
         }
         footer {
-            background-color: #333;
+            background-color: #f4f4f4;
             color: white;
             text-align: center;
             padding: 10px;
