--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             padding: 20px;
         }
         h1, h2 {
-            color: #333;
+            color: #f4f4f4;
         }
         .dance-item {
             margin: 20px 0;
