--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
     <section id="samba">
         <div class="dance-item">
             <h2>Samba</h2>
-            <img src="https://via.placeholder.com/800x400" alt="Samba" class="image">
+            <img src="img/Samba_Tropical_women_at_Helsinki_Samba_Carnaval_2012.jpg" alt="Samba" class="image">
             <p>O Samba é uma das danças mais emblemáticas do Brasil, representando a cultura carioca e sendo amplamente associado ao Carnaval. A dança é caracterizada por movimentos rápidos e rítmicos, geralmente acompanhados por um grupo de percussionistas e cantores.</p>
         </div>
     </section>
