--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
     <section id="forro">
         <div class="dance-item">
             <h2>Forró</h2>
-            <img src="https://via.placeholder.com/800x400" alt="Forró" class="image">
+            <img src="img/Apresentação_de_Forró_(2457934394).jpg" alt="Forró" class="image">
             <p>Originário do Nordeste, o Forró é uma dança popular de salão que envolve pares dançando ao som de ritmos como o baião e o xote. A dança é conhecida pela proximidade dos dançarinos e pelos passos animados.</p>
         </div>
     </section>
@@ -92,7 +92,7 @@
     <section id="bailado">
         <div class="dance-item">
             <h2>Bailado do Parintins</h2>
-            <img src="https://via.placeholder.com/800x400" alt="Bailado do Parintins" class="image">
+            <img src="img/DANZA_X_4_Puesta_coreográfica_de_Mauro_Cacciatore_en_la_Casa_del_Bicentenario_(13383756123).jpg" alt="Bailado do Parintins" class="image">
             <p>O Bailado do Parintins é uma dança folclórica originária do Amazonas, especificamente da cidade de Parintins. Ela é uma das atrações do famoso Festival de Parintins, que celebra a cultura e mitologia da região amazônica, com destaque para a disputa entre os bois-bumbás Garantido e Caprichoso.</p>
         </div>
     </section>
