--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
             padding: 0;
         }
         header {
-            background-color: #005c0f;
+            background-color: #005b3c;
             color: white;
             padding: 20px 0;
             text-align: center;
         }
         nav {
-            background-color: #005c0f;
+            background-color: #005b3c;
             overflow: hidden;
         }
         nav a {
